# Project-Athena

./: .gitignore  Athena.spec  Start-Athena.ps1  pyproject.toml  requirements.txt  src_tree.txt
docs/: INTEGRATION_LOG.md  RELEASE_BOARD.md
docs/adr/: ADR-001-project-vision.md  ADR-002-workspace-layout.md  ADR-003-document-model.md  ADR-004-indexing-architecture.md  ADR-005-repository-pattern.md  ADR-006-search-engine.md  ADR-007-ai-engine.md  ADR-008-plugin-system.md  ADR-009-coding-standards.md  ADR-010-testing-strategy.md
docs/architecture/: README.md  architecture.md  constitution.md  extractor-architecture.md  indexing-pipeline.md
docs/roadmap/: ATHENA_ALPHA_COMPLETION_PLAN.md
reports/: aeaf_dashboard.html  aeaf_report.json  aeaf_report.md
scripts/: build.ps1
src/athena/: main.py
src/athena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_database.py
tests/application/: test_document_viewer_service.py
tests/indexing/: test_document_library.py  test_document_repository.py  test_docx_extractor.py  test_hashing.py  test_indexed_document_service.py  test_indexing_chunking_modes.py  test_indexing_service.py  test_memory_repository.py  test_sqlite_repository.py
tests/infrastructure/: test_pdf_renderer.py
tests/integration/: test_rag_pipeline.py
tests/intelligence/: test_metadata_analyzer.py
tests/presentation/: test_document_browser_widget.py  test_document_table_model.py  test_document_viewer_page.py  test_pdf_canvas.py
tests/settings/: test_llm_settings.py
tests/workspace/: test_service.py  (+1 more)
tools/: test_docling.py
(+313 files in other folders)
