[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
version = "0.1.0"
description = "Offline-first AI Research Platform"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Jasvir Singh Sidhu" }
]

dependencies = [
    "PySide6>=6.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
files = ["src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]